# Proyecto1-TT

./: .gitignore  CMakeLists.txt  README.md  broker.cpp  consumer.cpp  haproxy.cfg  load_balancer.cpp  producer.cpp
clients/: consumer.cpp  producer.cpp
include/: broker.h  common.h  queue.h  topic.h
src/: broker.cpp  common.cpp  main.cpp  queue.cpp  topic.cpp
